--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,16 +2,48 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %} Scoding Store {% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {{ encore_entry_link_tags('global') }}
-
+        {% block stylesheets %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+              integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+              crossorigin="anonymous">
+        {% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+                    <a class="navbar-brand" href="{{ path('list_product') }}">Scoding store</a>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    {% if app.user %}
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('list_product') }}">Products <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('app_order_history') }}">Order history <span class="sr-only">(current)</span></a>
+                            </li>
+                        </ul>
+                        <nav class="my-2 my-lg-0">
+                            <a href="{{ path('app_cart') }}" class="btn btn-light">Cart</a>
+                            <text class="text-white">You are logged in as {{ app.user.userIdentifier }},</text> <a href="{{ path('app_logout') }}">Logout</a>
+                        </nav>
+                        {% else %}
+                            <nav class="my-2 my-lg-0">
+                                <code><a href={{ path('app_login') }}>Login</a></code>
+                                <code><a href={{ path('app_register') }}>Register</a></code>
+                            </nav>
+                        {% endif %}
+                    </div>
+                </nav>
+
+            </nav>
+        {% endblock %}
         {% block body %}{% endblock %}
     </body>
 </html>
